# freecad-skill

./: .gitignore  FreeCAD_启动总览.md  README.md  README.zh-CN.md  Unnamed1.FCStd  VERSION_UPDATES.md  VERSION_UPDATES.zh-CN.md  WSL_FreeCAD_Startup_Guide.md  apply_colors.py  inspect_origin.py  inspect_thruster.py  replace_p022_with_thruster.py  start_freecad_x11_7080.sh  verify_p022.py
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
config/: freecad_runtime.conf
docs/: ARCHITECTURE.md  FREECADMCP_QT_COMPAT_PATCH.zh-CN.md  WEB_AGENT_FREECAD_REGISTRY_INTEGRATION.zh-CN.md
examples/: sample.yaml
freecad_cli_tools/: CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
freecad_cli_tools/src/freecad_cli_tools/: __init__.py  artifact_registry.py  cli_support.py  component_info_assembly.py  freecad_sync.py  geometry.py  layout_dataset.py  layout_dataset_common.py  layout_dataset_faces.py  layout_dataset_io.py  rpc_client.py  rpc_script_fragments.py  rpc_script_loader.py  runtime_config.py  yaml_schema.py
freecad_cli_tools/src/freecad_cli_tools/cli/: __init__.py  build_assembly.py  build_assembly_from_yaml.py  build_component_info_assembly.py  check_document_collisions.py  create_document.py  create_object.py  delete_object.py  edit_object.py  execute_code.py  get_object.py  get_objects.py  get_parts_list.py  get_view.py  insert_part.py  layout_safe_move.py  list_documents.py  migrate_placement_schema.py  move_document_object.py  replace_component.py  sync_component_placements.py  yaml_component_safe_move.py
freecad_cli_tools/src/freecad_cli_tools/rpc_scripts/: __init__.py  assembly_from_component_info.py  assembly_from_layout.py  assembly_from_yaml.py  check_document_collisions.py  export_glb_from_step.py  get_object.py  get_objects.py  move_document_object.py  replace_component.py  sync_component_from_yaml.py  sync_component_placement.py  sync_component_placements.py
freecad_cli_tools/tests/: test_build_assembly.py  test_build_assembly_from_yaml.py  test_build_component_info_assembly_cli.py  test_cli_connection_errors.py  test_cli_support.py  test_component_info_assembly.py  test_fragment_sync.py  test_freecad_sync.py  test_get_object_cli.py  test_get_objects_cli.py  test_layout_dataset.py  test_layout_safe_move_cli.py  test_layout_safe_move_geometry.py  test_list_documents_cli.py  test_replace_component_cli.py  test_rpc_script_templates.py  test_yaml_component_safe_move.py  test_yaml_safe_move_cli.py  test_yaml_schema.py
scripts/: benchmark_yaml_safe_move.py  freecad_direct_xvfb_wsl.sh  start_freecad_gui_wsl.sh  start_freecad_rpc_wsl.sh  start_freecad_rpc_xvfb_wsl.sh  start_wsl_freecad_rpc.ps1
skill_backups/freecad/: SKILL.md
skill_backups/freecad/agents/: openai.yaml
skill_backups/freecad/guides/: check-collision.md  create-assembly-from-component-info.md  create-assembly.md  crud-reference.md  execute-code.md  get-objects.md  get-view.md  insert-part-from-library.md  load-yaml-data.md  replace-component.md  safe-move-workflow.md  yaml-safe-move.md
skill_backups/freecad_skill/: SKILL.md
skill_backups/freecad_skill/guides/: check-collision.md  edit-object.md  get-parts-list.md  move-object.md  safe-move-workflow.md  yaml-safe-move.md
skill_backups/freecad_skill_20260402/: SKILL.md
skill_backups/freecad_skill_20260402/guides/: create-assembly.md  create-document.md  create-object.md  delete-object.md  execute-code.md  get-object.md  get-view.md  list-documents.md  load-yaml-data.md  move-object.md  safe-move-workflow.md  yaml-safe-move.md
