[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freecad-cli-tools"
version = "0.10.0"
description = "Command-line tools for FreeCAD RPC interaction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "FreeCAD MCP Team"},
]
keywords = ["freecad", "cad", "cli", "rpc", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = ["PyYAML"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
freecad-create-assembly = "freecad_cli_tools.cli.build_assembly_from_yaml:main"
freecad-yaml-safe-move = "freecad_cli_tools.cli.yaml_component_safe_move:main"
freecad-replace-component = "freecad_cli_tools.cli.replace_component:main"

[project.urls]
Homepage = "https://github.com/freecad-mcp/freecad-cli-tools"
Repository = "https://github.com/freecad-mcp/freecad-cli-tools"

[tool.hatch.build.targets.wheel]
packages = ["src/freecad_cli_tools"]

[tool.hatch.version]
path = "src/freecad_cli_tools/__init__.py"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/freecad_cli_tools/rpc_scripts/*.py" = ["F821"]

[tool.pytest.ini_options]
testpaths = ["tests"]
